# pearpass-app-desktop

./: .gitignore  .gitmodules  README copy.md  README.md  app.js  app.tsx  babel.config.cjs  index.html  index.js  jest.config.js  lingui.config.js  package-lock.json  package.json  styles.js  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: build-appling.yaml  lint.yml  merge-develop.yaml  merge-main.yaml  on-push.yaml  test.yml
appling/: CMakeLists.txt  package.json
appling-next/: README.md  app.cjs  package-lock.json  package.json
appling-next/lib/: install.cjs  preflight.cjs  progress.cjs  utils.cjs  view.html.cjs  worker.cjs
assets/animations/: category.riv
e2e/: .gitignore  package-lock.json  package.json  playwright.config.js
e2e/components/: CreateLoginPage.js  LoginPage.js  MainView.js  VaultSelectPage.js  index.js
e2e/fixtures/: app.runner.js  test-data.js
e2e/scripts/: explore.js
e2e/specs/: createLoginItem.test.js  editigDeletingLoginItem.test.js  login.test.js  password.test.js
scripts/: add-kapil-remote.sh  checkout-kapil-main.sh  create-pr.sh  fetch-kapil-remote.sh  update-submodules.sh
snapcraft/: snapcraft.yaml
src/constants/: feedback.js  formFields.js  localStorage.js  meta.js  navigation.js  pearpassLinks.js  recordActions.js  recordColorByType.js  recordIconByType.js  services.js  timeConstants.js  transitions.js
src/context/: BannerContext.js  LoadingContext.js  LoadingContext.test.js  ModalContext.js  ModalContext.test.js  RouterContext.js  RouterContext.test.js  ToastContext.js  ToastContext.test.js
(+575 files in other folders)
